--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portofolio-app",
   "private": true,
-  "homepage": "https://mhmdalvin63.github.io/PortofolioAlvin",
   "version": "0.0.0",
+  "homepage": "https://mhmdalvin63.github.io/portofolio-app",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -32,7 +33,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
   }
 }
